5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1662_1398.log
== TEST (2019-04-15 15:06:25) 
-- CODE:
x= float(input())
k= 500+(100*x)
v= 800+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- OUTPUT:
13690.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:06:35) 
-- CODE:
x= float(input())
k= 500+(100*x)
v= 800+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- EXECUTION TIME:
0.128825
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
13690.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
43300.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
2890.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:06:40) 
-- CODE:
x= float(input())
k= 500+(100*x)
v= 800+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- OUTPUT:
13690.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:06:54) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 8000+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- OUTPUT:
20890.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:07:00) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 8000+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- EXECUTION TIME:
0.136295
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
20890.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
50500.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
10090.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:07:09) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 8000+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- OUTPUT:
20890.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:07:15) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 8000+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- EXECUTION TIME:
0.169912
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
20890.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
50500.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
10090.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:07:23) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 8000+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- OUTPUT:
20890.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:08:29) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 8000+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
if(x > 200)
	msg= v

print(round(msg, 2))
-- ERROR:
File "XXXX", line 7
    if(x > 200)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:08:39) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 8000+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- OUTPUT:
20890.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:09:44) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 8000+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- OUTPUT:
20890.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:10:03) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 8000+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- OUTPUT:
20890.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:10:31) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 8000+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- OUTPUT:
20890.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:10:49) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 8000+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- EXECUTION TIME:
0.126282
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
20890.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
50500.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
10090.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:40) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 8000+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- OUTPUT:
20890.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:19:47) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 8000+(100*200)+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- EXECUTION TIME:
0.203612
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
20890.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
50500.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
10090.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:37) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 28000+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- OUTPUT:
20890.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:20:47) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 28000+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- EXECUTION TIME:
0.15588
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
20890.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
50500.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
10090.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:20:57) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 28000+(90*(x-200))

if(x == 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- OUTPUT:
20890.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:21:43) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 28000+(90*(x-200))

if(x <== 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- ERROR:
File "XXXX", line 5
    if(x <== 200):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:21:55) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 28000+(90*(x-200))

if(x =< 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- ERROR:
File "XXXX", line 5
    if(x =< 200):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:21:59) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 28000+(90*(x-200))

if(x ==< 200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- ERROR:
File "XXXX", line 5
    if(x ==< 200):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:22:50) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 28000+(90*(x-200))

if(x == 200) or (x<200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- OUTPUT:
17100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:22:56) 
-- CODE:
x= float(input())
k= 5000+(100*x)
v= 28000+(90*(x-200))

if(x == 200) or (x<200):
	msg= k
else:
	msg= v

print(round(msg, 2))
-- EXECUTION TIME:
0.135357
-- TEST CASE 1:
---- input:
121
---- correct output:
17100.0
---- user output:
17100.0
-- TEST CASE 2:
---- input:
450
---- correct output:
50500.0
---- user output:
50500.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5100.0
---- user output:
5100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
